Assignment 2/initial/target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'Body'", "'Break'", 
                     "'Continue'", "'Do'", "'Else'", "'ElseIf'", "'EndBody'", 
                     "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", "'Function'", 
                     "'If'", "'Parameter'", "'Return'", "'Then'", "'Var'", 
                     "'While'", "'True'", "'False'", "'EndDo'", "'+'", "'+.'", 
                     "'-'", "'-.'", "'*'", "'*.'", "'\\'", "'\\.'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", 
                     "'='", "'.'", "','", "'('", "')'", "';'", "':'", "'['", 
                     "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "ID", "BLOCK_COMMENT", "WS", "INTEGER_LITERAL", 
                      "FLOAT_LITERAL", "BOOLEAN_LITERAL", "BODY", "BREAK", 
                      "CONTINUE", "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", 
                      "ENDFOR", "ENDWHILE", "FOR", "FUCNTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "TRUE", "FALSE", 
                      "ENDDO", "ADD", "ADD_F", "SUB", "SUB_F", "MUL", "MUL_F", 
                      "DIV", "DIV_F", "MOD", "NOT", "AND_OP", "OR_OP", "EQUAL_OP", 
                      "DIFF_OP", "LT", "GT", "LTE", "GTE", "DIV_FRAC", "LT_F", 
                      "GT_F", "LTE_F", "GTE_F", "EQ", "DOT", "COMMA", "LP", 
                      "RP", "SEMI", "COLON", "LSB", "RSB", "LCB", "RCB", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT", "STRING_LITERAL" ]

    RULE_program = 0
    RULE_global_dec = 1
    RULE_variable_dec = 2
    RULE_variable_list = 3
    RULE_variable = 4
    RULE_scalar = 5
    RULE_composite = 6
    RULE_literal = 7
    RULE_function_dec = 8
    RULE_parameter_list = 9
    RULE_parameter = 10
    RULE_statement_list = 11
    RULE_variable_declaration_stmt = 12
    RULE_assignment_stmt = 13
    RULE_if_stmt = 14
    RULE_for_stmt = 15
    RULE_while_stmt = 16
    RULE_do_while_stmt = 17
    RULE_break_stmt = 18
    RULE_continue_stmt = 19
    RULE_call_stmt = 20
    RULE_return_stmt = 21
    RULE_expression = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_exp7 = 29
    RULE_operands = 30
    RULE_array_literal = 31
    RULE_general_type = 32
    RULE_lit_type = 33

    ruleNames =  [ "program", "global_dec", "variable_dec", "variable_list", 
                   "variable", "scalar", "composite", "literal", "function_dec", 
                   "parameter_list", "parameter", "statement_list", "variable_declaration_stmt", 
                   "assignment_stmt", "if_stmt", "for_stmt", "while_stmt", 
                   "do_while_stmt", "break_stmt", "continue_stmt", "call_stmt", 
                   "return_stmt", "expression", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "operands", "array_literal", 
                   "general_type", "lit_type" ]

    EOF = Token.EOF
    ID=1
    BLOCK_COMMENT=2
    WS=3
    INTEGER_LITERAL=4
    FLOAT_LITERAL=5
    BOOLEAN_LITERAL=6
    BODY=7
    BREAK=8
    CONTINUE=9
    DO=10
    ELSE=11
    ELSEIF=12
    ENDBODY=13
    ENDIF=14
    ENDFOR=15
    ENDWHILE=16
    FOR=17
    FUCNTION=18
    IF=19
    PARAMETER=20
    RETURN=21
    THEN=22
    VAR=23
    WHILE=24
    TRUE=25
    FALSE=26
    ENDDO=27
    ADD=28
    ADD_F=29
    SUB=30
    SUB_F=31
    MUL=32
    MUL_F=33
    DIV=34
    DIV_F=35
    MOD=36
    NOT=37
    AND_OP=38
    OR_OP=39
    EQUAL_OP=40
    DIFF_OP=41
    LT=42
    GT=43
    LTE=44
    GTE=45
    DIV_FRAC=46
    LT_F=47
    GT_F=48
    LTE_F=49
    GTE_F=50
    EQ=51
    DOT=52
    COMMA=53
    LP=54
    RP=55
    SEMI=56
    COLON=57
    LSB=58
    RSB=59
    LCB=60
    RCB=61
    ERROR_CHAR=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    UNTERMINATED_COMMENT=65
    STRING_LITERAL=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def global_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Global_decContext)
            else:
                return self.getTypedRuleContext(BKITParser.Global_decContext,i)


        def function_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Function_decContext)
            else:
                return self.getTypedRuleContext(BKITParser.Function_decContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 68
                self.global_dec()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUCNTION:
                self.state = 74
                self.function_dec()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_decContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_decContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_global_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_dec" ):
                return visitor.visitGlobal_dec(self)
            else:
                return visitor.visitChildren(self)




    def global_dec(self):

        localctx = BKITParser.Global_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 82
                    self.variable_dec()

                else:
                    raise NoViableAltException(self)
                self.state = 85 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def variable_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_dec" ):
                return visitor.visitVariable_dec(self)
            else:
                return visitor.visitChildren(self)




    def variable_dec(self):

        localctx = BKITParser.Variable_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(BKITParser.VAR)
            self.state = 88
            self.match(BKITParser.COLON)
            self.state = 89
            self.variable_list()
            self.state = 90
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_list" ):
                return visitor.visitVariable_list(self)
            else:
                return visitor.visitChildren(self)




    def variable_list(self):

        localctx = BKITParser.Variable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.variable()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 93
                self.match(BKITParser.COMMA)
                self.state = 94
                self.variable()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar(self):
            return self.getTypedRuleContext(BKITParser.ScalarContext,0)


        def composite(self):
            return self.getTypedRuleContext(BKITParser.CompositeContext,0)


        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = BKITParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 100
                self.scalar()
                pass

            elif la_ == 2:
                self.state = 101
                self.composite()
                pass


            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.EQ:
                self.state = 104
                self.match(BKITParser.EQ)
                self.state = 105
                self.literal()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScalarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_scalar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScalar" ):
                return visitor.visitScalar(self)
            else:
                return visitor.visitChildren(self)




    def scalar(self):

        localctx = BKITParser.ScalarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_scalar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompositeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INTEGER_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTEGER_LITERAL)
            else:
                return self.getToken(BKITParser.INTEGER_LITERAL, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_composite

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComposite" ):
                return visitor.visitComposite(self)
            else:
                return visitor.visitChildren(self)




    def composite(self):

        localctx = BKITParser.CompositeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_composite)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(BKITParser.ID)
            self.state = 114 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 111
                    self.match(BKITParser.LSB)
                    self.state = 112
                    self.match(BKITParser.INTEGER_LITERAL)
                    self.state = 113
                    self.match(BKITParser.RSB)

                else:
                    raise NoViableAltException(self)
                self.state = 116 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lit_type(self):
            return self.getTypedRuleContext(BKITParser.Lit_typeContext,0)


        def array_literal(self):
            return self.getTypedRuleContext(BKITParser.Array_literalContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_literal)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INTEGER_LITERAL, BKITParser.FLOAT_LITERAL, BKITParser.BOOLEAN_LITERAL, BKITParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.lit_type()
                pass
            elif token in [BKITParser.LCB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.array_literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUCNTION(self):
            return self.getToken(BKITParser.FUCNTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(BKITParser.Parameter_listContext,0)


        def variable_declaration_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_declaration_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_declaration_stmtContext,i)


        def statement_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Statement_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Statement_listContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_function_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_dec" ):
                return visitor.visitFunction_dec(self)
            else:
                return visitor.visitChildren(self)




    def function_dec(self):

        localctx = BKITParser.Function_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(BKITParser.FUCNTION)
            self.state = 123
            self.match(BKITParser.COLON)
            self.state = 124
            self.match(BKITParser.ID)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 125
                self.match(BKITParser.PARAMETER)
                self.state = 126
                self.match(BKITParser.COLON)
                self.state = 127
                self.parameter_list()


            self.state = 130
            self.match(BKITParser.BODY)
            self.state = 131
            self.match(BKITParser.COLON)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 132
                self.variable_declaration_stmt()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ID) | (1 << BKITParser.BREAK) | (1 << BKITParser.CONTINUE) | (1 << BKITParser.DO) | (1 << BKITParser.FOR) | (1 << BKITParser.IF) | (1 << BKITParser.RETURN) | (1 << BKITParser.WHILE))) != 0):
                self.state = 138
                self.statement_list()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(BKITParser.ENDBODY)
            self.state = 145
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParameterContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = BKITParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.parameter()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 148
                self.match(BKITParser.COMMA)
                self.state = 149
                self.parameter()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
